# laba-parser

./: CMakeLists.txt  README.md
headers/: log_writer.h  parser.h  token_stream.h  tokentype_string.h  tokentypes.h
lex/: c_lexer.c  c_lexer.l
res/: grammar.txt  test.c
src/: c_lexer.c  main.c  parser.c  test_parser.c  token_stream.c
